--- a/common/static/css/_stream-section.sass
+++ b/common/static/css/_stream-section.sass
@@ -1,4 +1,5 @@
 .stream-sections
+	+clearfix
 	margin-bottom: 1rem
 
 	img
@@ -23,6 +24,8 @@
  		background-color: $color
  		padding-top: 1em
  		padding-bottom: 1em
+ 		clear: both
 
 .stream-section--white
 	color: $gray-mid-text
+	clear: none
